--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "iconsax-react": "^0.0.8",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
